--- a/index.html.tmpl
+++ b/index.html.tmpl
@@ -8,10 +8,11 @@
 <link rel="stylesheet" type="text/css" href="/%STYLESHEET%" />
 </head>
 <body></body>
-<script src="node_modules/babel-core/browser-polyfill.min.js"></script>
-<script src="node_modules/react/dist/react-with-addons.js"></script>
-<script src="node_modules/react-dom/dist/react-dom.min.js"></script>
-<script charset="utf-8" src="/src/jsonp.js"></script>
+<script src="/build/browser-polyfill.min.js"></script>
+<script src="/build/browser.min.js"></script>
+<script src="/build/react-with-addons.js"></script>
+<script src="/build/react-dom.min.js"></script>
+<script src="/build/jsonp.js"></script>
 <script src="/%APPJS%"></script>
 </html>
 
